--- a/marrujokela/index.html
+++ b/marrujokela/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Portfolio sivu</title>
 	<link rel="stylesheet" href="css/libs.min.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="libs/bootstrap-grid/bootstrap.min.css">
 </head>
 <body>
