--- a/marrujokela/index.html
+++ b/marrujokela/index.html
@@ -5,7 +5,7 @@
 	<title>Portfolio sivu</title>
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/main.min.css">
-	<link rel="stylesheet" href="libs/bootstrap-grid/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 <body>
 <header class="head">
